fix align market

--- a/src/Market.css
+++ b/src/Market.css
@@ -2,10 +2,8 @@
 body.mk-market-open {
   overscroll-behavior-y: none;
   overflow: hidden;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  touch-action: none; /* Thêm dòng này */
+  /* Remove position: fixed and height: 100% to fix iPhone LINE mini app white space issue */
+  touch-action: none;
 }
 
 .mk-market-container {
@@ -93,7 +91,7 @@ body.mk-market-open {
 
 .mk-market-title {
   text-align: center;
-  font-size: clamp(72px, 15vw, 90px);
+  font-size: clamp(65px, 15vw, 90px);
   font-weight: 700;
   font-family: "PP Neue Machina";
   color: white;
